--- a/action.yml
+++ b/action.yml
@@ -7,7 +7,7 @@ inputs:
     required: false
 runs:
   using: "node12"
-  main: "dist/index.js"
+  main: "src/index.js"
 branding:
   icon: "slash"
   color: "red"
