--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "close-pull-request",
+  "name": "toggle-pull-request",
   "version": "1.0.0",
-  "description": "A GitHub Action to automatically close a pull requests.",
+  "description": "A GitHub Action to toggle PRs and trigger CI.",
   "private": true,
   "main": "lib/index.js",
   "scripts": {
     "test": "jest --collect-coverage",
-    "lint": "eslint --fix src/**/*.js tests/**/*.js",
-    "build": "babel src -d lib && ncc build",
-    "precommit": "npm run build"
+    "lint": "eslint --fix src/**/*.js tests/**/*.js"
   },
   "repository": {
     "type": "git",
@@ -25,10 +23,6 @@
     "@actions/github": "^2.1.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.4",
-    "@babel/node": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
     "@zeit/ncc": "^0.21.1",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.8.0",
@@ -38,10 +32,5 @@
     "husky": "^4.2.3",
     "jest": "^25.1.0",
     "prettier": "^1.19.1"
-  },
-  "husky": {
-    "hooks": {
-      "precommit": "precommit"
-    }
   }
 }
